fix: assure hidden native input elements are positioned close to label
This fixes bugs when used with perfect scrollbar, where Chrome auto scrolls to the native element that sometimes is placed in overflow area.

closes #243

--- a/projects/sbb-esta/angular-public/radio-button/src/_radio-button.scss
+++ b/projects/sbb-esta/angular-public/radio-button/src/_radio-button.scss
@@ -19,6 +19,7 @@ $radioButtonGreyColor: $sbbColorGrey;
 
 @mixin radioButtonBase {
   display: flex;
+  position: relative; // assure absolute positioned native input is close to the label!
   align-items: flex-start;
 
   & > input[type='radio'] {
